feat: search and find stars
