# gen/py/src/openapi_server/apis/default_api.py
@@ -70,7 +70,6 @@ from openapi_server.models.api_trigger_starfield_render_post200_response import 
 from openapi_server.models.api_trigger_starfield_render_post_request import ApiTriggerStarfieldRenderPostRequest
 from openapi_server.models.api_user_reg_post_request import ApiUserRegPostRequest
 from openapi_server.models.api_username_verify_post_request import ApiUsernameVerifyPostRequest
-from openapi_server.models.api_verify_user_token_post_request import ApiVerifyUserTokenPostRequest
 from openapi_server.models.attitude import Attitude
 from openapi_server.models.blog import Blog
 from openapi_server.models.blog_id import BlogID
@@ -808,12 +807,11 @@ async def api_username_verify_post(
     response_model_by_alias=True,
 )
 async def api_verify_user_token_post(
-    api_verify_user_token_post_request: ApiVerifyUserTokenPostRequest = Body(None, description=""),
 ) -> UserResponse:
     """Check whether the provided Token is valid. If it is valid, return the corresponding user information."""
     if not BaseDefaultApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
-    return await BaseDefaultApi.subclasses[0]().api_verify_user_token_post(api_verify_user_token_post_request)
+    return await BaseDefaultApi.subclasses[0]().api_verify_user_token_post()
 
 
 @router.post(
